fix(kibbeh): fix weird scrolling on Firefox
Prevents fixed elements from moving when scrolling on Firefox

--- a/kibbeh/src/styles/globals.css
+++ b/kibbeh/src/styles/globals.css
@@ -104,7 +104,7 @@ html {
 }
 
 #__next {
-  overflow: auto;
+  overflow-y: auto;
 }
 
 textarea {
